testsuite/tests/th/T9084.stderr

T9084.hs:5:2: error: [GHC-65904]
    MINIMAL pragmas not (yet) handled by Template Haskell
